// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build-only yarn: build 1`] = `Array []`;

exports[`build-only yarn: publish 1`] = `Array []`;

exports[`last-only dummy: build 1`] = `Array []`;

exports[`last-only dummy: publish 1`] = `Array []`;

exports[`updates image yarn (dry-run): build 1`] = `Array []`;

exports[`updates image yarn (dry-run): publish 1`] = `Array []`;

exports[`works dummy: build 1`] = `
Array [
  Array [
    Object {
      "buildArgs": Array [
        "DUMMY_VERSION=10",
      ],
      "cache": undefined,
      "cacheTags": Array [
        "latest",
      ],
      "dryRun": undefined,
      "image": "dummy",
      "imagePrefix": "renovate",
      "platform": "linux/amd64",
      "tag": "10",
    },
  ],
  Array [
    Object {
      "buildArgs": Array [
        "DUMMY_VERSION=13",
      ],
      "cache": undefined,
      "cacheTags": Array [
        "latest",
      ],
      "dryRun": undefined,
      "image": "dummy",
      "imagePrefix": "renovate",
      "platform": "linux/amd64",
      "tag": "13",
    },
  ],
]
`;

exports[`works dummy: publish 1`] = `Array []`;

exports[`works dummyx: build 1`] = `
Array [
  Array [
    Object {
      "buildArgs": Array [
        "DUMMY_VERSION=10",
      ],
      "cache": undefined,
      "cacheTags": Array [
        "latest",
      ],
      "dryRun": undefined,
      "image": "dummy",
      "imagePrefix": "renovate",
      "platform": "linux/amd64",
      "tag": "10",
    },
  ],
  Array [
    Object {
      "buildArgs": Array [
        "DUMMY_VERSION=13",
      ],
      "cache": undefined,
      "cacheTags": Array [
        "latest",
      ],
      "dryRun": undefined,
      "image": "dummy",
      "imagePrefix": "renovate",
      "platform": "linux/amd64",
      "tag": "13",
    },
  ],
]
`;

exports[`works dummyx: publish 1`] = `Array []`;

exports[`works gradle: build 1`] = `Array []`;

exports[`works gradle: publish 1`] = `Array []`;

exports[`works pnpm: build 1`] = `Array []`;

exports[`works pnpm: publish 1`] = `Array []`;

exports[`works ubuntu: build 1`] = `
Array [
  Array [
    Object {
      "buildArgs": Array [
        "UBUNTU_VERSION=bionic",
      ],
      "cache": undefined,
      "cacheTags": Array [
        "latest",
        "18",
        "18.4",
      ],
      "dryRun": undefined,
      "image": "ubuntu",
      "imagePrefix": "renovate",
      "platform": "linux/amd64",
      "tag": "bionic",
    },
  ],
  Array [
    Object {
      "buildArgs": Array [
        "UBUNTU_VERSION=focal",
      ],
      "cache": undefined,
      "cacheTags": Array [
        "latest",
        "20",
        "20.4",
      ],
      "dryRun": undefined,
      "image": "ubuntu",
      "imagePrefix": "renovate",
      "platform": "linux/amd64",
      "tag": "focal",
    },
  ],
]
`;

exports[`works ubuntu: publish 1`] = `Array []`;

exports[`works yarn: build 1`] = `Array []`;

exports[`works yarn: publish 1`] = `Array []`;
